client url changed

--- a/Backend/.env
+++ b/Backend/.env
@@ -5,7 +5,7 @@ JWT_SECRET=123456789DRMD
 #CLUSTER=cluster0.6ckuguz.mongodb.net
 #DB=memory-hub
 
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://memoryhub-frontend-l8jf.onrender.com/
 
 # cloudinary credentials 
 CLOUDINARY_CLOUD_NAME=dpvgqomuh
