--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-VITE_SERVER_URL='http://localhost:3001'
+VITE_SERVER_URL='https://memory-hub-36tt.onrender.com'
 
 
 # VITE_SERVER_URL= https://memoryhub-backend.onrender.com
