--- a/Backend/.env
+++ b/Backend/.env
@@ -5,7 +5,8 @@ JWT_SECRET=123456789DRMD
 #CLUSTER=cluster0.6ckuguz.mongodb.net
 #DB=memory-hub
 
-CLIENT_URL=https://memoryhub-frontend-l8jf.onrender.com/
+CLIENT_URL=https://memoryhub-frontend-l8jf.onrender.com
+SERVER_URL=https://memory-hub-36tt.onrender.com
 
 # cloudinary credentials 
 CLOUDINARY_CLOUD_NAME=dpvgqomuh
