--- a/Backend/.env
+++ b/Backend/.env
@@ -6,6 +6,7 @@ JWT_SECRET=123456789DRMD
 #DB=memory-hub
 
 CLIENT_URL=https://memoryhub-frontend-l8jf.onrender.com
+# CLIENT_URL = http://localhost:5173
 SERVER_URL=https://memory-hub-36tt.onrender.com
 
 # cloudinary credentials 
